// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendCurrencyInputform > renders input in fiat correctly 1`] = `
.c1 {
  color: #131313;
  pointer-events: auto;
  width: 0;
  position: relative;
  font-weight: 485;
  outline: none;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: transparent;
  font-size: 28px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0px;
  -webkit-appearance: textfield;
  text-align: right;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1 [type='number'] {
  -moz-appearance: textfield;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1::-moz-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1:-ms-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1::placeholder {
  color: rgba(19,19,19,0.35);
}

.c2 {
  max-height: 84px;
  max-width: calc(100% - 43px);
  width: 43px;
  font-size: 70px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c2::-webkit-input-placeholder {
  opacity: 1;
}

.c2::-moz-placeholder {
  opacity: 1;
}

.c2:-ms-input-placeholder {
  opacity: 1;
}

.c2::placeholder {
  opacity: 1;
}

.c3 {
  position: absolute;
  visibility: hidden;
  bottom: 0px;
  right: 0px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #131313;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c4 {
  color: #131313;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-1"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative _backgroundColor-surface1 _alignItems-center _justifyContent-flex-end _borderTopLeftRadius-t-radius-ro291586449 _borderTopRightRadius-t-radius-ro291586449 _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-non101 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _width-10037 _pt-t-space-spa1360334076 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          You’re sending
        </span>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _pt-t-space-spa1360333927 _pb-t-space-spa1360333927 _gap-t-space-spa1360334076 _maxWidth-10037"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _maxWidth-10037 _position-relative _width-max-content"
        >
          <span
            class="c0"
            style="line-height: 84px; font-size: 70px;"
          >
            $
          </span>
          <input
            autocomplete="off"
            autocorrect="off"
            class="c1 c2"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0"
            spellcheck="false"
            style="line-height: 84px;"
            type="text"
            value="1000"
          />
          <span
            class="c3"
            style="line-height: 84px; font-size: 70px;"
          >
            1000
          </span>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _opacity-0 _width-10037 _height-20px _zIndex--1"
          />
        </div>
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-center _gap-t-space-gap52 _cursor-pointer"
          style="transition: 100ms;"
        >
          <span
            class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
            data-disable-theme="true"
          >
            100.00 DAI
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px; color: rgba(19, 19, 19, 0.63);"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface1 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _borderBottomRightRadius-t-radius-ro291586449 _borderBottomLeftRadius-t-radius-ro291586449 _height-64px _justifyContent-center _position-relative _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-spa94665586 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
      >
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _justifyContent-space-betwe3241 _cursor-pointer"
          style="transition: 100ms;"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap1569"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _width-10037 _gap-t-space-gap1569"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
                >
                  <div
                    class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
                    data-testid="token-logo"
                  >
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
                    />
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                      data-testid="img-token-image"
                    >
                      <img
                        height="36"
                        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                        style="object-fit: contain; border-radius: 18px; z-index: 1;"
                        width="36"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-10037"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c4 css-n8z49y"
                  >
                    DAI
                  </div>
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-gap52 _width-10037"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
          >
            <div
              class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _justifyContent-center _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _transform-rotate270de41674"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 24px; height: 24px; color: rgb(155, 155, 155);"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="font_unset _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-pre-wrap _position-absolute _width-1px _height-1px _mt--1px _mr--1px _mb--1px _ml--1px _zIndex--10000 _overflowX-hidden _overflowY-hidden _opacity-1e-8 _pointerEvents-none"
    >
      <h2
        class="is_DialogTitle font_heading _display-inline _boxSizing-border-box _wordWrap-break-word _userSelect-auto _color-color _whiteSpace-normal _fontFamily-f-family _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
        id="title-:r1u:"
        role="heading"
      />
    </span>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`SendCurrencyInputform > renders input in token amount correctly 1`] = `
.c0 {
  color: #131313;
  pointer-events: auto;
  width: 0;
  position: relative;
  font-weight: 485;
  outline: none;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: transparent;
  font-size: 28px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0px;
  -webkit-appearance: textfield;
  text-align: right;
}

.c0::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0 [type='number'] {
  -moz-appearance: textfield;
}

.c0::-webkit-outer-spin-button,
.c0::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c0::-webkit-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c0::-moz-placeholder {
  color: rgba(19,19,19,0.35);
}

.c0:-ms-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c0::placeholder {
  color: rgba(19,19,19,0.35);
}

.c1 {
  max-height: 84px;
  max-width: 100%;
  width: 43px;
  font-size: 70px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c1::-webkit-input-placeholder {
  opacity: 1;
}

.c1::-moz-placeholder {
  opacity: 1;
}

.c1:-ms-input-placeholder {
  opacity: 1;
}

.c1::placeholder {
  opacity: 1;
}

.c2 {
  position: absolute;
  visibility: hidden;
  bottom: 0px;
  right: 0px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c3 {
  color: #131313;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-1"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative _backgroundColor-surface1 _alignItems-center _justifyContent-flex-end _borderTopLeftRadius-t-radius-ro291586449 _borderTopRightRadius-t-radius-ro291586449 _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-non101 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _width-10037 _pt-t-space-spa1360334076 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          You’re sending
        </span>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _pt-t-space-spa1360333927 _pb-t-space-spa1360333927 _gap-t-space-spa1360334076 _maxWidth-10037"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _maxWidth-10037 _position-relative _width-max-content"
        >
          <input
            autocomplete="off"
            autocorrect="off"
            class="c0 c1"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0"
            spellcheck="false"
            style="line-height: 84px;"
            type="text"
            value="1"
          />
          <span
            class="c2"
            style="line-height: 84px; font-size: 70px;"
          >
            1
          </span>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _opacity-0 _width-10037 _height-20px _zIndex--1"
          />
        </div>
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-center _gap-t-space-gap52 _cursor-pointer"
          style="transition: 100ms;"
        >
          <span
            class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
            data-disable-theme="true"
          >
            $100.00
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px; color: rgba(19, 19, 19, 0.63);"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface1 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _borderBottomRightRadius-t-radius-ro291586449 _borderBottomLeftRadius-t-radius-ro291586449 _height-64px _justifyContent-center _position-relative _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-spa94665586 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
      >
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _justifyContent-space-betwe3241 _cursor-pointer"
          style="transition: 100ms;"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap1569"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _width-10037 _gap-t-space-gap1569"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
                >
                  <div
                    class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
                    data-testid="token-logo"
                  >
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
                    />
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                      data-testid="img-token-image"
                    >
                      <img
                        height="36"
                        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                        style="object-fit: contain; border-radius: 18px; z-index: 1;"
                        width="36"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-10037"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c3 css-n8z49y"
                  >
                    DAI
                  </div>
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-gap52 _width-10037"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
          >
            <div
              class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _justifyContent-center _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _transform-rotate270de41674"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 24px; height: 24px; color: rgb(155, 155, 155);"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="font_unset _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-pre-wrap _position-absolute _width-1px _height-1px _mt--1px _mr--1px _mb--1px _ml--1px _zIndex--10000 _overflowX-hidden _overflowY-hidden _opacity-1e-8 _pointerEvents-none"
    >
      <h2
        class="is_DialogTitle font_heading _display-inline _boxSizing-border-box _wordWrap-break-word _userSelect-auto _color-color _whiteSpace-normal _fontFamily-f-family _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
        id="title-:r2v:"
        role="heading"
      />
    </span>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`SendCurrencyInputform > should render placeholder values 1`] = `
.c1 {
  color: #131313;
  pointer-events: auto;
  width: 0;
  position: relative;
  font-weight: 485;
  outline: none;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: transparent;
  font-size: 28px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0px;
  -webkit-appearance: textfield;
  text-align: right;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1 [type='number'] {
  -moz-appearance: textfield;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1::-moz-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1:-ms-input-placeholder {
  color: rgba(19,19,19,0.35);
}

.c1::placeholder {
  color: rgba(19,19,19,0.35);
}

.c2 {
  max-height: 84px;
  max-width: calc(100% - 43px);
  width: 43px;
  font-size: 70px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c2::-webkit-input-placeholder {
  opacity: 1;
}

.c2::-moz-placeholder {
  opacity: 1;
}

.c2:-ms-input-placeholder {
  opacity: 1;
}

.c2::placeholder {
  opacity: 1;
}

.c3 {
  position: absolute;
  visibility: hidden;
  bottom: 0px;
  right: 0px;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #131313;
  text-align: left;
  font-size: 70px;
  font-weight: 500;
  line-height: 60px;
  color: rgba(19,19,19,0.35);
}

.c4 {
  color: #131313;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-1"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative _backgroundColor-surface1 _alignItems-center _justifyContent-flex-end _borderTopLeftRadius-t-radius-ro291586449 _borderTopRightRadius-t-radius-ro291586449 _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-non101 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _width-10037 _pt-t-space-spa1360334076 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          You’re sending
        </span>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _pt-t-space-spa1360333927 _pb-t-space-spa1360333927 _gap-t-space-spa1360334076 _maxWidth-10037"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _maxWidth-10037 _position-relative _width-max-content"
        >
          <span
            class="c0"
            style="line-height: 84px; font-size: 70px;"
          >
            $
          </span>
          <input
            autocomplete="off"
            autocorrect="off"
            class="c1 c2"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0"
            spellcheck="false"
            style="line-height: 84px;"
            type="text"
            value=""
          />
          <span
            class="c3"
            style="line-height: 84px; font-size: 70px;"
          />
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _opacity-0 _width-10037 _height-20px _zIndex--1"
          />
        </div>
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-center _gap-t-space-gap52 _cursor-pointer"
          style="transition: 100ms;"
        >
          <span
            class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
            data-disable-theme="true"
          >
            0 DAI
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px; color: rgba(19, 19, 19, 0.63);"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface1 _pr-t-space-spa1360334076 _pl-t-space-spa1360334076 _borderBottomRightRadius-t-radius-ro291586449 _borderBottomLeftRadius-t-radius-ro291586449 _height-64px _justifyContent-center _position-relative _borderTopColor-surface3 _borderRightColor-surface3 _borderBottomColor-surface3 _borderLeftColor-surface3 _borderTopWidth-t-space-spa94665586 _borderRightWidth-t-space-spa94665586 _borderBottomWidth-t-space-spa94665586 _borderLeftWidth-t-space-spa94665586 _borderBottomStyle-solid _borderTopStyle-solid _borderLeftStyle-solid _borderRightStyle-solid"
      >
        <div
          class="_textDecoration-_platformweb_none _transitionDuration-_platformweb_0--2s _textDecorationLine-_platformweb_none _opacity-0hover-0--8 _opacity-0active-0--6 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _justifyContent-space-betwe3241 _cursor-pointer"
          style="transition: 100ms;"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-gap1569"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _width-10037 _gap-t-space-gap1569"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
                >
                  <div
                    class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
                    data-testid="token-logo"
                  >
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
                    />
                    <div
                      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                      data-testid="img-token-image"
                    >
                      <img
                        height="36"
                        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                        style="object-fit: contain; border-radius: 18px; z-index: 1;"
                        width="36"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-10037"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                >
                  <div
                    class="c4 css-n8z49y"
                  >
                    DAI
                  </div>
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-t-space-gap52 _width-10037"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
          >
            <div
              class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _justifyContent-center _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _transform-rotate270de41674"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 24px; height: 24px; color: rgb(155, 155, 155);"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="font_unset _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-pre-wrap _position-absolute _width-1px _height-1px _mt--1px _mr--1px _mb--1px _ml--1px _zIndex--10000 _overflowX-hidden _overflowY-hidden _opacity-1e-8 _pointerEvents-none"
    >
      <h2
        class="is_DialogTitle font_heading _display-inline _boxSizing-border-box _wordWrap-break-word _userSelect-auto _color-color _whiteSpace-normal _fontFamily-f-family _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
        id="title-:rt:"
        role="heading"
      />
    </span>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;
